[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/gui/GameOver.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/FinalScore.gd" type="Script" id=2]
[ext_resource path="res://src/effect/MoveEffect.gd" type="Script" id=3]

[node name="GameOver" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 360.0
margin_top = 612.0
margin_right = 720.0
margin_bottom = 1307.0
custom_constants/separation = 80

[node name="GameOver" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 360.0
margin_bottom = 65.0
text = "Game Over"

[node name="Scores" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 360.0
margin_bottom = 550.0

[node name="TotalScore" type="Label" parent="CenterContainer/VBoxContainer/Scores"]
margin_right = 360.0
margin_bottom = 65.0
text = "Final Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OKScore" type="Label" parent="CenterContainer/VBoxContainer/Scores"]
margin_top = 85.0
margin_right = 360.0
margin_bottom = 150.0
text = "Final Score"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
score_type = 2

[node name="GoodScore" type="Label" parent="CenterContainer/VBoxContainer/Scores"]
margin_top = 170.0
margin_right = 360.0
margin_bottom = 235.0
text = "Final Score"
script = ExtResource( 2 )
score_type = 1

[node name="PerfectScore" type="Label" parent="CenterContainer/VBoxContainer/Scores"]
margin_top = 255.0
margin_right = 360.0
margin_bottom = 320.0
text = "Final Score"
script = ExtResource( 2 )

[node name="Combo" type="Label" parent="CenterContainer/VBoxContainer/Scores"]
margin_top = 340.0
margin_right = 360.0
margin_bottom = 405.0
text = "Max Combo"

[node name="Retry" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 630.0
margin_right = 360.0
margin_bottom = 695.0
text = "Play Again"

[node name="ShowTween" type="Tween" parent="."]

[node name="MoveEffect" type="Node" parent="ShowTween"]
script = ExtResource( 3 )
start_offset = Vector2( -40, 0 )
node_paths = [ NodePath("../../CenterContainer") ]

[node name="HideTween" type="Tween" parent="."]

[node name="MoveEffect" type="Node" parent="HideTween"]
script = ExtResource( 3 )
start_offset = Vector2( 40, 0 )
reverse = true
node_paths = [ NodePath("../../CenterContainer") ]

[connection signal="pressed" from="CenterContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="tween_all_completed" from="HideTween" to="." method="_on_HideTween_tween_all_completed"]
